objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Amount_AMT__c</fullName>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DealerName__c</fullName>
        <formula>Opportunity.PreferredDealerAccount_TXT__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_TXT__c</fullName>
        <formula>Opportunity.First_Name_TXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_TXT__c</fullName>
        <formula>Opportunity.Last_Name_TXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Email_TXT__c</fullName>
        <formula>Opportunity.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_TXT__c</fullName>
        <formula>Opportunity.Middle_Name_TXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Opportunity.Model_TXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Opportunity.Year_YR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Quote</fullName>
        <active>true</active>
        <label>Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>